syntax = "proto3";

import "hospital/messages.proto";
import "google/protobuf/empty.proto";

package hospital.query;

option java_package = "ar.edu.itba.pod.grpc.hospital.query";
option java_outer_classname = "QueryServiceModel";
option java_multiple_files = true;

service QueryService {

  // List of current rooms with their patients and doctors if not empty
  rpc QueryRooms(google.protobuf.Empty) returns (Treatments);

  // List of patients waiting for a room while dying
  rpc QueryWaitingRoom(google.protobuf.Empty) returns (WaitingPatients);

  // List of all treatments
  rpc QueryCares(google.protobuf.Empty) returns (Treatments);

}

message WaitingPatients {
  repeated Patient patients = 1;
}
